@@ -6,9 +6,6 @@
 
 package org.eclipse.xpanse.plugins.huaweicloud.monitor;
 
-import static org.eclipse.xpanse.plugins.huaweicloud.common.HuaweiCloudRetryStrategy.DEFAULT_DELAY_MILLIS;
-import static org.eclipse.xpanse.plugins.huaweicloud.common.HuaweiCloudRetryStrategy.DEFAULT_RETRY_TIMES;
-
 import com.huaweicloud.sdk.ces.v1.CesClient;
 import com.huaweicloud.sdk.ces.v1.model.BatchListMetricDataRequest;
 import com.huaweicloud.sdk.ces.v1.model.BatchListMetricDataResponse;
@@ -18,6 +15,7 @@ import com.huaweicloud.sdk.ces.v1.model.MetricInfoList;
 import com.huaweicloud.sdk.ces.v1.model.ShowMetricDataRequest;
 import com.huaweicloud.sdk.ces.v1.model.ShowMetricDataResponse;
 import com.huaweicloud.sdk.core.auth.ICredential;
+import jakarta.annotation.Resource;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -31,6 +29,7 @@ import org.eclipse.xpanse.modules.models.credential.AbstractCredentialInfo;
 import org.eclipse.xpanse.modules.models.credential.enums.CredentialType;
 import org.eclipse.xpanse.modules.models.monitor.Metric;
 import org.eclipse.xpanse.modules.models.monitor.enums.MonitorResourceType;
+import org.eclipse.xpanse.modules.models.monitor.exceptions.ClientApiCallFailedException;
 import org.eclipse.xpanse.modules.models.monitor.exceptions.MetricsDataNotYetAvailableException;
 import org.eclipse.xpanse.modules.models.service.deploy.DeployResource;
 import org.eclipse.xpanse.modules.monitor.ServiceMetricsStore;
@@ -38,7 +37,9 @@ import org.eclipse.xpanse.modules.orchestrator.monitor.ResourceMetricsRequest;
 import org.eclipse.xpanse.modules.orchestrator.monitor.ServiceMetricsRequest;
 import org.eclipse.xpanse.plugins.huaweicloud.common.HuaweiCloudClient;
 import org.eclipse.xpanse.plugins.huaweicloud.common.HuaweiCloudRetryStrategy;
-import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.retry.annotation.Backoff;
+import org.springframework.retry.annotation.Retryable;
+import org.springframework.retry.support.RetrySynchronizationManager;
 import org.springframework.stereotype.Component;
 import org.springframework.util.CollectionUtils;
 
@@ -49,28 +50,16 @@ import org.springframework.util.CollectionUtils;
 @Component
 public class HuaweiCloudMetricsService {
 
-    private final HuaweiCloudClient huaweiCloudClient;
-
-    private final ServiceMetricsStore serviceMetricsStore;
-
-    private final HuaweiCloudDataModelConverter huaweiCloudDataModelConverter;
-
-    private final CredentialCenter credentialCenter;
-
-    /**
-     * Constructs a HuaweiCloudMetricsService with the necessary dependencies.
-     */
-    @Autowired
-    public HuaweiCloudMetricsService(
-            HuaweiCloudClient huaweiCloudClient,
-            ServiceMetricsStore serviceMetricsStore,
-            HuaweiCloudDataModelConverter huaweiCloudDataModelConverter,
-            CredentialCenter credentialCenter) {
-        this.huaweiCloudClient = huaweiCloudClient;
-        this.serviceMetricsStore = serviceMetricsStore;
-        this.huaweiCloudDataModelConverter = huaweiCloudDataModelConverter;
-        this.credentialCenter = credentialCenter;
-    }
+    @Resource
+    private HuaweiCloudClient huaweiCloudClient;
+    @Resource
+    private ServiceMetricsStore serviceMetricsStore;
+    @Resource
+    private HuaweiCloudDataModelConverter huaweiCloudDataModelConverter;
+    @Resource
+    private CredentialCenter credentialCenter;
+    @Resource
+    private HuaweiCloudRetryStrategy huaweiCloudRetryStrategy;
 
     /**
      * Get metrics of the @deployResource.
@@ -78,37 +67,49 @@ public class HuaweiCloudMetricsService {
      * @param resourceMetricRequest The request model to query metrics.
      * @return Returns list of metric result.
      */
+    @Retryable(retryFor = ClientApiCallFailedException.class,
+            maxAttemptsExpression = "${http.request.retry.max.attempts}",
+            backoff = @Backoff(delayExpression = "${http.request.retry.delay.milliseconds}"))
     public List<Metric> getMetricsByResource(ResourceMetricsRequest resourceMetricRequest) {
-        List<Metric> metrics = new ArrayList<>();
         DeployResource deployResource = resourceMetricRequest.getDeployResource();
-        AbstractCredentialInfo credential = credentialCenter.getCredential(
-                Csp.HUAWEI,
-                CredentialType.VARIABLES, resourceMetricRequest.getUserId());
-        MonitorResourceType monitorResourceType = resourceMetricRequest.getMonitorResourceType();
-        ICredential icredential = huaweiCloudClient.getCredential(credential);
-        CesClient client = huaweiCloudClient.getCesClient(icredential,
-                deployResource.getProperties().get("region"));
-        Map<MonitorResourceType, MetricInfoList> targetMetricsMap =
-                getTargetMetricsMap(deployResource, monitorResourceType, client);
-        for (Map.Entry<MonitorResourceType, MetricInfoList> entry
-                : targetMetricsMap.entrySet()) {
-            ShowMetricDataRequest showMetricDataRequest =
-                    huaweiCloudDataModelConverter.buildShowMetricDataRequest(
-                            resourceMetricRequest, entry.getValue());
-            ShowMetricDataResponse showMetricDataResponse =
-                    client.showMetricDataInvoker(showMetricDataRequest)
-                            .retryTimes(DEFAULT_RETRY_TIMES)
-                            .retryCondition(huaweiCloudClient::matchRetryCondition)
-                            .backoffStrategy(new HuaweiCloudRetryStrategy(DEFAULT_DELAY_MILLIS))
-                            .invoke();
-            Metric metric =
-                    huaweiCloudDataModelConverter.convertShowMetricDataResponseToMetric(
-                            deployResource, showMetricDataResponse, entry.getValue(),
-                            resourceMetricRequest.isOnlyLastKnownMetric());
-            doCacheActionForResourceMetrics(resourceMetricRequest, entry.getKey(), metric);
-            metrics.add(metric);
+        String regionName = deployResource.getProperties().get("region");
+        List<Metric> metrics = new ArrayList<>();
+        try {
+            AbstractCredentialInfo credential = credentialCenter.getCredential(
+                    Csp.HUAWEI, CredentialType.VARIABLES, resourceMetricRequest.getUserId());
+            MonitorResourceType monitorResourceType =
+                    resourceMetricRequest.getMonitorResourceType();
+            ICredential icredential = huaweiCloudClient.getCredential(credential);
+            CesClient client = huaweiCloudClient.getCesClient(icredential, regionName);
+            Map<MonitorResourceType, MetricInfoList> targetMetricsMap =
+                    getTargetMetricsMap(deployResource, monitorResourceType, client);
+            for (Map.Entry<MonitorResourceType, MetricInfoList> entry
+                    : targetMetricsMap.entrySet()) {
+                ShowMetricDataRequest showMetricDataRequest =
+                        huaweiCloudDataModelConverter.buildShowMetricDataRequest(
+                                resourceMetricRequest, entry.getValue());
+                ShowMetricDataResponse showMetricDataResponse =
+                        client.showMetricDataInvoker(showMetricDataRequest)
+                                .retryTimes(huaweiCloudRetryStrategy.getRetryMaxAttempts())
+                                .retryCondition(huaweiCloudRetryStrategy::matchRetryCondition)
+                                .backoffStrategy(huaweiCloudRetryStrategy)
+                                .invoke();
+                Metric metric =
+                        huaweiCloudDataModelConverter.convertShowMetricDataResponseToMetric(
+                                deployResource, showMetricDataResponse, entry.getValue(),
+                                resourceMetricRequest.isOnlyLastKnownMetric());
+                doCacheActionForResourceMetrics(resourceMetricRequest, entry.getKey(), metric);
+                metrics.add(metric);
+            }
+            return metrics;
+        } catch (Exception e) {
+            String errorMsg = String.format("Get metrics of resource %s error. %s",
+                    deployResource.getResourceId(), e.getMessage());
+            int retryCount = Objects.isNull(RetrySynchronizationManager.getContext())
+                    ? 0 : RetrySynchronizationManager.getContext().getRetryCount();
+            log.error(errorMsg + " Retry count:" + retryCount);
+            throw new ClientApiCallFailedException(errorMsg);
         }
-        return metrics;
     }
 
 
@@ -118,36 +119,52 @@ public class HuaweiCloudMetricsService {
      * @param serviceMetricRequest The request model to query metrics.
      * @return Returns list of metric result.
      */
+    @Retryable(retryFor = ClientApiCallFailedException.class,
+            maxAttemptsExpression = "${http.request.retry.max.attempts}",
+            backoff = @Backoff(delayExpression = "${http.request.retry.delay.milliseconds}"))
     public List<Metric> getMetricsByService(ServiceMetricsRequest serviceMetricRequest) {
         List<DeployResource> deployResources = serviceMetricRequest.getDeployResources();
-        AbstractCredentialInfo credential = credentialCenter.getCredential(
-                Csp.HUAWEI, CredentialType.VARIABLES, serviceMetricRequest.getUserId());
-        MonitorResourceType monitorResourceType = serviceMetricRequest.getMonitorResourceType();
-        ICredential icredential = huaweiCloudClient.getCredential(credential);
-        CesClient client = huaweiCloudClient.getCesClient(icredential,
-                deployResources.get(0).getProperties().get("region"));
-        Map<String, List<MetricInfoList>> deployResourceMetricInfoMap = new HashMap<>();
-        for (DeployResource deployResource : deployResources) {
-            Map<MonitorResourceType, MetricInfoList> targetMetricsMap =
-                    getTargetMetricsMap(deployResource, monitorResourceType, client);
-            List<MetricInfoList> targetMetricInfoList = targetMetricsMap.values().stream().toList();
-            deployResourceMetricInfoMap.put(deployResource.getResourceId(), targetMetricInfoList);
+        String regionName = deployResources.getFirst().getProperties().get("region");
+        try {
+            AbstractCredentialInfo credential = credentialCenter.getCredential(
+                    Csp.HUAWEI, CredentialType.VARIABLES, serviceMetricRequest.getUserId());
+            MonitorResourceType monitorResourceType = serviceMetricRequest.getMonitorResourceType();
+            ICredential icredential = huaweiCloudClient.getCredential(credential);
+            CesClient client = huaweiCloudClient.getCesClient(icredential, regionName);
+            Map<String, List<MetricInfoList>> deployResourceMetricInfoMap = new HashMap<>();
+            for (DeployResource deployResource : deployResources) {
+                Map<MonitorResourceType, MetricInfoList> targetMetricsMap =
+                        getTargetMetricsMap(deployResource, monitorResourceType, client);
+                List<MetricInfoList> targetMetricInfoList =
+                        targetMetricsMap.values().stream().toList();
+                deployResourceMetricInfoMap.put(deployResource.getResourceId(),
+                        targetMetricInfoList);
+            }
+            BatchListMetricDataRequest batchListMetricDataRequest =
+                    huaweiCloudDataModelConverter.buildBatchListMetricDataRequest(
+                            serviceMetricRequest, deployResourceMetricInfoMap);
+            BatchListMetricDataResponse batchListMetricDataResponse =
+                    client.batchListMetricDataInvoker(batchListMetricDataRequest)
+                            .retryTimes(huaweiCloudRetryStrategy.getRetryMaxAttempts())
+                            .retryCondition(huaweiCloudRetryStrategy::matchRetryCondition)
+                            .backoffStrategy(huaweiCloudRetryStrategy)
+                            .invoke();
+            List<Metric> metrics =
+                    huaweiCloudDataModelConverter.convertBatchListMetricDataResponseToMetric(
+                            batchListMetricDataResponse, deployResourceMetricInfoMap,
+                            deployResources,
+                            serviceMetricRequest.isOnlyLastKnownMetric());
+            doCacheActionForServiceMetrics(serviceMetricRequest, deployResourceMetricInfoMap,
+                    metrics);
+            return metrics;
+        } catch (Exception e) {
+            String errorMsg = String.format("Get metrics of service %s error. %s",
+                    serviceMetricRequest.getServiceId(), e.getMessage());
+            int retryCount = Objects.isNull(RetrySynchronizationManager.getContext())
+                    ? 0 : RetrySynchronizationManager.getContext().getRetryCount();
+            log.error(errorMsg + " Retry count:" + retryCount);
+            throw new ClientApiCallFailedException(errorMsg);
         }
-        BatchListMetricDataRequest batchListMetricDataRequest =
-                huaweiCloudDataModelConverter.buildBatchListMetricDataRequest(
-                        serviceMetricRequest, deployResourceMetricInfoMap);
-        BatchListMetricDataResponse batchListMetricDataResponse =
-                client.batchListMetricDataInvoker(batchListMetricDataRequest)
-                        .retryTimes(DEFAULT_RETRY_TIMES)
-                        .retryCondition(huaweiCloudClient::matchRetryCondition)
-                        .backoffStrategy(new HuaweiCloudRetryStrategy(DEFAULT_DELAY_MILLIS))
-                        .invoke();
-        List<Metric> metrics =
-                huaweiCloudDataModelConverter.convertBatchListMetricDataResponseToMetric(
-                        batchListMetricDataResponse, deployResourceMetricInfoMap, deployResources,
-                        serviceMetricRequest.isOnlyLastKnownMetric());
-        doCacheActionForServiceMetrics(serviceMetricRequest, deployResourceMetricInfoMap, metrics);
-        return metrics;
     }
 
     private void doCacheActionForResourceMetrics(ResourceMetricsRequest resourceMetricRequest,
@@ -244,10 +261,10 @@ public class HuaweiCloudMetricsService {
         ListMetricsRequest request =
                 huaweiCloudDataModelConverter.buildListMetricsRequest(deployResource);
         ListMetricsResponse listMetricsResponse = client.listMetricsInvoker(request)
-                .retryTimes(DEFAULT_RETRY_TIMES)
-                .retryCondition(huaweiCloudClient::matchRetryCondition)
+                .retryTimes(huaweiCloudRetryStrategy.getRetryMaxAttempts())
+                .retryCondition(huaweiCloudRetryStrategy::matchRetryCondition)
                 .backoffStrategy(
-                        new HuaweiCloudRetryStrategy(DEFAULT_DELAY_MILLIS))
+                        huaweiCloudRetryStrategy)
                 .invoke();
         if (Objects.nonNull(listMetricsResponse)
                 && !CollectionUtils.isEmpty(listMetricsResponse.getMetrics())) {
